<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">foofind</string>
<string name="want_that_file">I.Want.That.File.</string>
<string name="files_indexed">files indexed</string>
<string name="placeholder">Write here your search...</string>
<string name="typeandsource">Filetypes and Sources...</string>
<string name="search_button">Search</string>
<string name="filetype">Filetype</string>
<string name="all">All</string>
<string name="alltype_summary">Any filetype</string>
<string name="sources_selection">Sources selection</string>
<string name="allsources_summary">Any source</string>
<string name="dd">Direct downloads</string>
<string name="dd_summary">Download sites such as megaupload or rapidshare</string>
<string name="torrents">Torrents</string>
<string name="torrents_summary">Torrent trackers such as thepiratebay or mininova</string>
<string name="streaming">Streaming</string>
<string name="streaming_summary">Streaming sites such as megavideo</string>
<string name="gnutella">Gnutella</string>
<string name="gnutella_summary">Files inside the Gnutella net</string>
<string name="ed2k">Ed2k</string>
<string name="ed2k_summary">Files inside the Ed2k net</string>
<string name="filetype_selection">Filetype selection</string>
<string name="audio">Audio</string>
<string name="video">Video</string>
<string name="image">Image</string>
<string name="document">Document</string>
<string name="software">Software</string>
<string name="archive">Archive</string>

<string name="searching">Searching...</string>
<string name="search_results">Search Results</string>
<string name="showing_results_for">Showing results for</string>
<string name="no_results">No results found</string>
<string name="missing_size">(Missing size)</string>
<string name="no_description">No description</string>
<string name="please_wait">Please Wait...</string>

<string name="settings">Settings</string>
<string name="credits">Credits</string>
<string name="quit">Quit</string>

<string name="credits_text">© 2011 Adán Sánchez de Pedro Crespo. Source code under GPLv3 license.
	\n\n\"foofind\" is a registered mark owned by Foofind Labs, S.L.
	\n\nMenu icons by <a href="http://androidicons.com/">Guenther Beyer</a> licensed under the Creative Commons Attribution 3.0 Unported License.
</string>

<string name="account_settings">Account Settings</string>
<string name="results_settings">Results Settings</string>
<string name="max_results">Max number of results</string>
<string name="not_implemented">Feature not implemented yet</string>

</resources>
